Closed Bug 1541771 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::dom::`anonymous namespace'::InitUsageForOrigin]

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

Unspecified
Windows 8
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox67.0.1 --- unaffected
firefox68 --- disabled
firefox69 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-41c614d9-09a4-4005-9bcf-9e2280190404.

Top 10 frames of crashing thread:

0 xul.dll static void mozilla::dom::`anonymous namespace'::InitUsageForOrigin dom/localstorage/ActorsParent.cpp:2777
1 xul.dll nsresult mozilla::dom::`anonymous namespace'::QuotaClient::InitOrigin dom/localstorage/ActorsParent.cpp:7663
2 xul.dll nsresult mozilla::dom::quota::QuotaManager::InitializeOrigin dom/quota/ActorsParent.cpp:4094
3 xul.dll nsresult mozilla::dom::quota::QuotaManager::InitializeRepository dom/quota/ActorsParent.cpp:3963
4 xul.dll nsresult mozilla::dom::quota::QuotaManager::EnsureTemporaryStorageIsInitialized dom/quota/ActorsParent.cpp:5321
5 xul.dll mozilla::dom::quota::QuotaManager::EnsureOriginIsInitializedInternal dom/quota/ActorsParent.cpp:5248
6 xul.dll nsresult mozilla::dom::indexedDB::`anonymous namespace'::OpenDatabaseOp::DoDatabaseWork dom/indexedDB/ActorsParent.cpp:19818
7 xul.dll nsresult mozilla::dom::indexedDB::`anonymous namespace'::FactoryOp::Run dom/indexedDB/ActorsParent.cpp:19662
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1180
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:482

Blocks: 1540402
Crash Signature: [@ mozilla::dom::`anonymous namespace'::InitUsageForOrigin] → [@ mozilla::dom::`anonymous namespace'::InitUsageForOrigin] [@ mozilla::dom::(anonymous namespace)::InitUsageForOrigin]

Just noting here that this was triggered by bug 1540401 which is now backed out, so these are back to just debug asserts now.

This looks like bug 1514600.

Priority: -- → P1

(In reply to Jan Varga [:janv] from comment #2)

This looks like bug 1514600.

Yeah, but bug 1514600 is less likely to happen.
There's another problem. If I go to preferences immediately after FF is launched, quota manager gets GetUsage request and since temporary storage is not yet initialized, it uses client->InitOrigin() for getting usage. The problem is that LSNG caches the usage information and when temporary storage is being initialized it asserts that we already initialized given origin (already have a cached entry for that).
We should probably pass a flag to InitOrigin that it's not called as part of temporary storage initialization.

Assignee: nobody → jvarga
Status: NEW → ASSIGNED
Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1583103d9715 LSNG: Don't cache usage in InitOrigin if it's not for temporary storage initialization; r=asuth
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

this crash signature is still present in builds after the patch has landed.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

crashes are only reported from nightly/devedition builds

This is now fixed. See bug 1540401 comment 37.

Status: REOPENED → RESOLVED
Closed: 6 years ago6 years ago
Resolution: --- → FIXED
Target Milestone: mozilla68 → mozilla69
Regressed by: 1540401
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: