Bug 1541771 - LSNG: Don't cache usage in InitOrigin if it's not for temporary storage initialization; r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D27490