dom/simpledb/ActorsParent.cpp
@@ -443,7 +443,8 @@ class QuotaClient final : public mozilla::dom::quota::Client {
   nsresult InitOrigin(PersistenceType aPersistenceType,
                       const nsACString& aGroup, const nsACString& aOrigin,
                       const AtomicBool& aCanceled,
-                      UsageInfo* aUsageInfo) override;
+                      UsageInfo* aUsageInfo,
+                      bool aForGetUsage) override;
 
   nsresult GetUsageForOrigin(PersistenceType aPersistenceType,
                              const nsACString& aGroup,
@@ -1610,7 +1611,8 @@ nsresult QuotaClient::InitOrigin(PersistenceType aPersistenceType,
                                  const nsACString& aGroup,
                                  const nsACString& aOrigin,
                                  const AtomicBool& aCanceled,
-                                 UsageInfo* aUsageInfo) {
+                                 UsageInfo* aUsageInfo,
+                                 bool aForGetUsage) {
   AssertIsOnIOThread();
 
   if (!aUsageInfo) {
